<resources>
    <string name="app_name" translatable="false">My Application</string>
    <string name="Nombre_de_usuario" translatable="false">Nombre de usuario</string>
    <string name="contraseña" translatable="false">contraseña</string>
    <string name="botton_text" translatable="false">LOGIN</string>
    <string name="no_tienes_cuenta" translatable="false">no tienes cuenta?</string>
    <string name="crea_una_aqui">crea una aqui</string>
    <string name="correo">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="confirme_contraseña">Comfirme contraseña</string>
    <string name="button_text_create_account">UNETE</string>
    <string name="title_crear_cuenta">Crear cuenta</string>
    <string name="carlos_vargas_cardview">Carlos Vargas</string>
    <string name="hace_cardview">Hace</string>
    <string name="dias_cardview"> 4 dias</string>
    <string name="home_item">Home</string>
    <string name="yo_item">YO</string>
    <string name="buscar_item">Buscar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home_fragment">Home</string>
    <string name="text_megusta_image_detail">me gusta</string>
    <string name="text_cantidad_megusta_image_detail">10</string>
    <string name="text_title_image_detail">/"Todo copas en la playa</string>


</resources>